# Chat_with_Documents

./: .gitignore  01_Manipulation_Tensors.ipynb  LICENSE  README.md  cli_utils.py  config_manager.py  embedding_manager.py  get_embedding_func.py  llm_manager.py  populate_db.py  pyproject.toml  query_data.py  requirements.txt  vector_store_manager.py
src/: document_loader.py  embedding_manager.py  llm_manager.py  main.py  populate_db.py
src/chat_with_docs/: cli_utils.py  document_loader.py  embedding_manager.py  llm_manager.py  main.py  populate_db.py  query_data.py  vector_store_manager.py
