[project]
name = "chat-with-documents" # Renamed to "chat-with-documents" as requested
version = "0.1.0"
description = "A CLI tool to chat with your documents (PDFs, DOCX, Images) using various AI models."
readme = "README.md"
requires-python = ">=3.10" # Updated to reflect common Python 3.10+ usage
dependencies = [
    "chromadb>=1.0.12",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-ollama>=0.3.3",
    "langchain-google-genai>=0.1.0", # Added for Gemini
    "langchain-openai>=0.1.0",       # Added for OpenAI
    "pypdf>=5.6.0",
    "rich>=14.0.0",
    "python-docx>=1.1.0",            # Added for DOCX support
    "Pillow>=10.0.0",                # Added for Image processing
    "pytesseract>=0.3.10",           # Added for Image OCR
    "requests>=2.30.0",              # Added for Ollama API calls
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
# This tells setuptools to find packages in the 'src' directory
find = {where = ["src"]}

[project.scripts]
# Define your main entry point for the CLI tool
# The format is "command_name = package_name.module_name:function_name"
chat-with-docs = "src.main:main" # Updated to point to src.main
