[project]
name = "chat-with-documents"
version = "0.1.0"
description = "A CLI tool to chat with your documents (PDFs, DOCX, Images) using various AI models."
readme = "README.md"
requires-python = ">=3.10" # Keeping >=3.10, as the protobuf pin should handle 3.13 compatibility
dependencies = [
    "protobuf==3.20.3",               # FIX: Explicitly pin protobuf to a compatible version
    "chromadb>=1.0.12",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-ollama>=0.3.3",
    "langchain-google-genai>=0.1.0",
    "langchain-openai>=0.1.0",
    "pypdf>=5.6.0",
    "rich>=14.0.0",
    "python-docx>=1.1.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "requests>=2.30.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {where = ["src"]}

[project.scripts]
chat-with-docs = "src.main:main"
