[project]
name = "chat-with-documents"
version = "0.1.0"
description = "A CLI tool to chat with PDFs, DOCX, and Images using various AI models (Ollama, OpenAI, Google)."
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [{name = "MD Wasiful Kabir", email = "wasifulkabir2023@gmail.com"}]
keywords = ["cli", "langchain", "document", "rag", "embedding", "openai", "ollama", "google", "ai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License"
]

dependencies = [
  # Safe and tested versions
  "protobuf==3.20.3",
  "chromadb>=1.0.12,<2.0.0",
  "langchain>=0.3.26,<0.4.0",
  "langchain-chroma>=0.2.4,<0.3.0",
  "langchain-community>=0.3.27,<0.4.0",
  "langchain-google-genai>=2.1.6,<3.0.0",
  "langchain-ollama>=0.3.3,<0.4.0",
  "langchain-openai>=0.3.27,<0.4.0",
  "pypdf>=5.7.0,<6.0.0",
  "rich>=14.0.0,<15.0.0",
  "python-docx>=1.2.0,<1.3.0",
  "pillow>=11.3.0,<12.0.0",
  "pytesseract>=0.3.13,<0.4.0",
  "docx2txt>=0.9,<1.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
  "requests>=2.30.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
chat-with-docs = "chat_with_docs.main:main"

